# httpfiletools

./: .gitignore  Cargo.toml  PRD.md  README.md  snapcraft.yaml
.github/: copilot-instructions.md
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/danny/: charter.md  history.md
.squad/agents/gus/: charter.md
.squad/agents/hank/: charter.md
.squad/agents/jesse/: charter.md
.squad/agents/linus/: charter.md  history.md
.squad/agents/livingston/: charter.md  history.md
.squad/agents/mike/: charter.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/rusty/: charter.md  history.md
.squad/agents/saul/: charter.md
.squad/agents/scribe/: charter.md  history.md
.squad/agents/walt/: charter.md  history.md
.squad/agents/yen/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/decisions/inbox/: rusty-httprunner-default-features.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-05-25-implementation-session.md  2026-05-25-setup-wave.md
.squad/orchestration-log/: 2026-05-25-implementation-session.md  2026-05-25-setup-wave.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs  compat_cli_golden.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  generate.rs  lib.rs  run.rs
crates/core/tests/fixtures/golden/: generate-one-file.http
crates/core/tests/fixtures/http/: local-health.http
crates/generator/: Cargo.toml
crates/generator/src/: lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs
docs/: migration.md
fixtures/golden/: petstore-one-file.http
fixtures/http/: sample.http
fixtures/openapi/: petstore.yaml
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/cli/tests/fixtures/golden/: help.stdout
src/core/: Cargo.toml
src/core/src/: error.rs  generate.rs  lib.rs  run.rs
src/core/tests/: compat_core.rs
src/core/tests/fixtures/openapi/: compat-openapi.yaml  invalid-missing-path-parameter.yaml
