[workspace]
members = ["crates/generator", "crates/runner", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/christianhelle/httpfiletools"

[workspace.dependencies]
anyhow = "1.0.102"
assert_cmd = "2.2.2"
clap = { version = "4.6.1", features = ["derive"] }
httpgenerator-core = "=1.1.0"
httprunner-core = { version = "=0.9.51", default-features = false }
insta = { version = "1.47.2", features = ["yaml"] }
predicates = "3.1.4"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
url = "2.5.8"
walkdir = "2.5.0"
