[workspace]
members = ["src/cli", "src/core"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/christianhelle/httpfiletools"

[workspace.dependencies]
anyhow = "1.0.101"
httpgenerator-core = "1.1.0"
httprunner-core = "0.9.51"
