[package]
name = "httpfiletools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
httprunner-core.workspace = true
httpfiletools-generator = { path = "../generator" }
httpfiletools-runner = { path = "../runner" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
