[package]
name = "httpfiletools-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
httpgenerator-core.workspace = true
httprunner-core.workspace = true
reqwest.workspace = true
tempfile.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
