[package]
name = "httpfiletools-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
httprunner-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
