[package]
name = "httpfiletools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "httpfiletools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
httpfiletools-core = { path = "../core" }
